kubernetes/apps/base/generate/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: generate-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
