kubernetes/apps/base/generate/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: generate
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`generate.theblacklodge.dev`) #|| Host(`generate.austinsmith.org`)
      kind: Rule
      services:
        - name: generate-web
          port: 80
